<resources>
    <string name="app_name">여행을떠나요</string>

    <string name="activity_title_home">홈</string>
    <string name="activity_title_dashboard">대쉬보드</string>
    <string name="activity_title_pathfinding">경로탐색</string>
    <string name="activity_title_parking_lot">자전거 보관소</string>
    <string name="activity_title_social">게시판</string>

    <string name="state_seoul">서울</string>
    <string name="state_busan">부산</string>
    <string name="state_daegu">대구</string>
    <string name="state_ulsan">울산</string>
    <string name="state_gwangju">광주</string>
    <string name="state_gyeongju">경주</string>
    <string name="state_jeju">제주</string>
    <string name="state_incheon">인천</string>

    <!-- 메인화면 -->
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="detailed_view">상세보기</string>

    <!-- 길찾기 -->
    <string name="starting_point">출발지 :</string>
    <string name="end_point">도착지 : </string>


    <!-- 대쉬보드 -->
    <string name="distance">거리</string>
    <string name="speed">속도</string>
    <string name="average_speed">평균속도</string>
    <string name="calorie">칼로리</string>
    <string name="rpm">RPM</string>
    <string name="start">시작</string>
    <string name="quit">종료</string>
    <string name="lapse">경과시간</string>
    <string name="my_loc">내 위치</string>
    <string name="weight">체중</string>

    <!-- 주차장 -->
    <string name="parking_loc">주차위치 :</string>
    <string name="parking_time">주차시간 :</string>
    <string name="park">주차</string>
    <string name="find_parking_loc">찾기</string>

    <!-- 로그인 -->
    <string name="username">이름</string>
    <string name="age">나이</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="login">로그인</string>
    <string name="register">가입</string>

    <!-- 서울 유적지 이름 -->
    <string name="seoul_cultural_asset_name_changdeokgung">창덕궁</string>
    <string name="seoul_cultural_asset_name_gyeongbokgung">경복궁</string>
    <string name="seoul_cultural_asset_name_heunginjimun">흥인지문</string>
    <string name="seoul_cultural_asset_name_jongmyo">종묘</string>
    <string name="seoul_cultural_asset_name_mongchontoseong">몽촌토성</string>
    <string name="seoul_cultural_asset_name_namhansansang">남한산성</string>
    <string name="seoul_cultural_asset_name_sungnyemun">숭례문</string>
    <string name="seoul_cultural_asset_name_sunsa">암사동 선사유적지</string>

    <!-- 경주 유적지 이름 -->
    <string name="gyeongju_cultural_asset_name_bulguksa">불국사</string>
    <string name="gyeongju_cultural_asset_name_bunhwangsa">분황사</string>
    <string name="gyeongju_cultural_asset_name_chumsungdae">첨성대</string>
    <string name="gyeongju_cultural_asset_name_hwangryongsaji">황룡사지</string>
    <string name="gyeongju_cultural_asset_name_imhae_jeonji">임해 전지</string>
    <string name="gyeongju_cultural_asset_name_posukjung">포석정</string>
    <string name="gyeongju_cultural_asset_name_royal_tomb_of_queen_sundeok">선덕여왕릉</string>
    <string name="gyeongju_cultural_asset_name_sukgulam">석굴암</string>

    <!-- 퀴즈 -->

    <string name="write_footprint_title">발자취 제목</string>
    <string name="write_footprint_comment">한줄평</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>

    <string name="enlargement">확대</string>
    <string name="modification">수정</string>
    <string name="camera">촬영</string>
    <string name="album">앨범</string>
    <string name="save">저장</string>
    <string name="reset">초기화</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>

    <string name="material_icon_go_left">&#xe875;</string>
    <string name="material_icon_go_right">&#xe876;</string>

    <string name="number_of_cultural_asset">%d 문화재 수</string>

    <string name="fontello_logo">&#xe8ad;</string>
    <string name="fontello_search">&#xea01;</string>
    <string name="fontello_x_mark">&#xe887;</string>
    <string name="fontello_x_mark_masked">&#xe885;</string>
    <string name="fontello_microfon">&#xea18;</string>
    <string name="fontello_user">&#xe800;</string>
    <string name="fontello_password">&#xe9df;</string>
    <string name="fontello_upload">&#xeb30;</string>
    <string name="fontello_play">&#xea7d;</string>
    <string name="fontello_heart_empty">&#xe9b5;</string>
    <string name="fontello_heart_full">&#xe9b6;</string>
    <string name="fontello_drag_and_drop">&#xe988;</string>

    <!-- Material Design Icons -->
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_clock">&#xe881;</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TextView related strings -->
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- For Update -->
    <string name="confirm_exit">Press Back button again to exit</string>

    <string name="context_menu">Context menu</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

</resources>
