<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_semi_transparent">

    <fragment
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="380dp"
        class="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_parking_lot_loc"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/parking_loc"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="test 부산대"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_parking_lot_time"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_parking_lot_loc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/parking_time"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="test 00:00:00"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_parking_lot_btn_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_parking_lot_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.example.androidbootstrap.BootstrapButton
            android:id="@+id/btn_park"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/park"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"/>

        <com.example.androidbootstrap.BootstrapButton
            android:id="@+id/btn_find_parking_loc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/find_parking_loc"
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
