<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="60dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_email_24"/>

            <com.example.almig.android.view.FloatLabeledEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/email"
                app:fletHintTextColor="@color/material_grey_900"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_password_32"/>

            <com.example.almig.android.view.FloatLabeledEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/password"
                app:fletHintTextColor="@color/material_grey_900"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_weight_24"/>

            <com.example.almig.android.view.FloatLabeledEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/weight"
                app:fletHintTextColor="@color/material_grey_900"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="12dp"
        android:gravity="right" >

        <com.example.almig.android.font.RobotoTextView
            android:id="@+id/login"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/login_selector_button"
            android:minWidth="96dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:typeface="robotoMedium" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent" />

        <com.example.almig.android.font.RobotoTextView
            android:id="@+id/register"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/login_selector_button"
            android:minWidth="96dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:typeface="robotoMedium" />
    </LinearLayout>

    <com.example.almig.android.font.RobotoTextView
        android:id="@+id/skip"
        style="@style/ButtonStyle.RaisedEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:background="@drawable/transparent_button_selector"
        android:minWidth="96dp"
        android:text="스킵"
        android:textColor="@android:color/white" />

</LinearLayout>